[package]
name = "minisign"
version = "0.5.22"
authors = ["Frank Denis <github@pureftpd.org>", "Daniel Rangel <daniel@rangel.in>", "ChristopherA@LifeWithAlacrity.com"]
description = "rust-minisign with support for Tor onion keys."
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign", "Tor"]
repository = "hhttps://github.com/BlockchainCommons/torgap-sig"

[dependencies]
getrandom = { version = "0.2", default-features = false }
scrypt = { version = "0.4", default-features = false }
base32 = "0.4.0"
sha3 = "0.9.1"
sha2 = "0.9.2"
data-encoding = "1.2.0"
bs58 = "0.3.1"
x25519-dalek = "1.1"
serde_json = {version="1.0", features= ["preserve_order"]}
slip10 = "0.4.2"
hex = "0.4.2"

[target.'cfg(any(windows, unix))'.dependencies]
rpassword = "5.0"

[profile.dev]
lto = "thin"
opt-level = 3

[profile.test]
lto = "thin"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
panic = "abort"
opt-level = 3
